force-app/main/default/objects/Employee__c/fields/Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>Pay_Rate__c</fullName>
    <defaultValue>10</defaultValue>
    <description>The employee&apos;s gross hourly pay, before taxes.</description>
    <label>Pay Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>