force-app/main/default/objects/Employee__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>The employee&apos;s current position.</description>
    <label>Position</label>
    <length>80</length>
    <type>Text</type>
</CustomField>