force-app/main/default/objects/Employee__c/fields/Primary_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The employee&apos;s personal e-mail address.</description>
    <label>Primary Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>