force-app/main/default/objects/Employee__c/fields/Primary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone__c</fullName>
    <description>The employee&apos;s primary phone number. This should not be his/her work number.</description>
    <label>Primary Phone</label>
    <type>Phone</type>
</CustomField>