force-app/main/default/objects/Employee__c/fields/Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Work_Phone__c</fullName>
    <description>The employee&apos;s work phone number.</description>
    <label>Work Phone</label>
    <type>Phone</type>
</CustomField>