force-app/main/default/objects/Employee__c/validationRules/Minimum_Wage_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_Wage_Check</fullName>
    <active>true</active>
    <description>Check if pay rate is below federal minimum wage ($7.25).</description>
    <errorConditionFormula>Pay_Rate__c &lt; 7.25</errorConditionFormula>
    <errorDisplayField>Pay_Rate__c</errorDisplayField>
    <errorMessage>Pay rate is below federal minimum wage of $7.25.</errorMessage>
</ValidationRule>