force-app/main/default/objects/Employee__c/listViews/Employee_List_View.listView-meta.xml
<ListView>
    <fullName>Employee_List_View</fullName>
    <columns>NAME</columns>
    <columns>Employer__c</columns>
    <columns>Position__c</columns>
    <columns>Date_of_Birth__c</columns>
    <columns>Primary_Email__c</columns>
    <columns>Primary_Phone__c</columns>
    <filterScope>Everything</filterScope>
    <label>Employee List View</label>
</ListView>